--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -42,8 +42,8 @@ jobs:
             docker build . -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/spacedeck-open:${{ github.run_id }}
             docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/spacedeck-open:${{ github.run_id }}
 
-        - name: 'Deploy to Azure App Service'
-          uses: 'azure/webapps-deploy@v2'
-          with:
-            app-name: 'meetingmaker-spacedeck-dev'
-            images: ${{ secrets.REGISTRY_LOGIN_SERVER }}/spacedeck-open:${{ github.run_id }}
+        # - name: 'Deploy to Azure App Service'
+        #   uses: 'azure/webapps-deploy@v2'
+        #   with:
+        #     app-name: 'meetingmaker-spacedeck-dev'
+        #     images: ${{ secrets.REGISTRY_LOGIN_SERVER }}/spacedeck-open:${{ github.run_id }}
