Update workflow: set node 14

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -25,6 +25,9 @@ jobs:
             key: spacedeck-node_modules-${{ hashFiles('**/package-lock.json') }}
 
         - name: Install Dependencies
+        - uses: actions/setup-node@v3
+        with:
+          node-version: 14
           if: steps.npm-cache.outputs.cache-hit != 'true'
           run: |
             npm install
