Update workflow: set node 14

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -25,7 +25,7 @@ jobs:
             key: spacedeck-node_modules-${{ hashFiles('**/package-lock.json') }}
 
         - name: Install Dependencies
-        - uses: actions/setup-node@v3
+          uses: actions/setup-node@v3
           with:
             node-version: 14
           if: steps.npm-cache.outputs.cache-hit != 'true'
