--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -9,13 +9,10 @@ jobs:
         runs-on: ubuntu-latest
         steps:
         # checkout the repo
-        - name: 'Checkout GitHub Action'
-          uses: actions/checkout@master
+        - uses: actions/checkout@v2
 
-        - name: 'Login via Azure CLI'
-          uses: azure/login@v1
-          with:
-            creds: ${{ secrets.AZURE_CREDENTIALS }}
+        - name: Set env
+          run: echo "VERSIONED_IMAGE=${{ github.run_id }}" >> $GITHUB_ENV
 
         - name: Cache node modules
           uses: actions/cache@v2
@@ -37,14 +34,18 @@ jobs:
             gulp styles
 
         - name: 'Build and push image'
-          uses: azure/docker-login@v1
+          uses: docker/login-action@v1
           with:
-            login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
+            registry: ${{ secrets.REGISTRY_LOGIN_SERVER }}
             username: ${{ secrets.REGISTRY_USERNAME }}
             password: ${{ secrets.REGISTRY_PASSWORD }}
         - run: |
-            docker build . -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/spacedeck-open:${{ github.run_id }}
-            docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/spacedeck-open:${{ github.run_id }}
+                echo "Release version: ${{ env.VERSIONED_IMAGE }}"
+                docker build --rm -t spacedeck-open:${{ env.VERSIONED_IMAGE }} .
+                docker tag spacedeck-open:${{ env.VERSIONED_IMAGE }} nclong87/spacedeck-open:latest
+                docker tag spacedeck-open:${{ env.VERSIONED_IMAGE }} nclong87/spacedeck-open:${{ env.VERSIONED_IMAGE }}
+                docker image push nclong87/spacedeck-open:latest
+                docker image push nclong87/spacedeck-open:${{ env.VERSIONED_IMAGE }}
 
         # - name: 'Deploy to Azure App Service'
         #   uses: 'azure/webapps-deploy@v2'
