--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "gm": "^1.23.1",
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
-    "gulp-sass": "^4.0.2",
+    "gulp-sass": "^5.1.0",
     "helmet": "^3.5.0",
     "i18n-2": "0.6.3",
     "log-timestamp": "latest",
@@ -49,6 +49,11 @@
     "underscore": "1.8.3",
     "uuid": "^3.2.1",
     "validator": "7.0.0",
+    "y18n": "^5.0.5",
+    "json-schema": "^0.4.0",
+    "lodash": "^4.17.21",
+    "trim-newlines": "3.0.1",
+    "glob-parent": "5.1.2",
     "ws": "3.3.1"
   },
   "main": "app.js",
