--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "lodash": "^4.17.21",
     "trim-newlines": "3.0.1",
     "glob-parent": "5.1.2",
+    "sass": "1.54.0",
     "ws": "3.3.1"
   },
   "main": "app.js",
