--- a/.github/workflows/spce-prod.yml
+++ b/.github/workflows/spce-prod.yml
@@ -1,9 +1,8 @@
 on:
     push:
-        branches:
-        - spce-prod
-        paths:
-        - '.github/workflows/spce-prod.yml'
+        tags:
+        - '*.*.*'
+
 name: Deploy spacedeck SPCE Production
 
 jobs:
@@ -12,7 +11,12 @@ jobs:
         steps:
         # checkout the repo
         - name: 'Checkout GitHub Action'
-          uses: actions/checkout@master
+          uses: actions/checkout@v3
+          with:
+            ref: spce-prod
+
+        - name: Set Release version
+          run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
 
         - name: Cache node modules
           uses: actions/cache@v2
@@ -30,14 +34,14 @@ jobs:
             gulp styles
 
         - name: 'Build and push image'
-          uses: azure/docker-login@v1
+          uses: docker/login-action@v2
           with:
-            login-server: ${{ secrets.REGISTRY_LOGIN_SERVER_PROD }}
-            username: ${{ secrets.REGISTRY_USERNAME_PROD }}
-            password: ${{ secrets.REGISTRY_PASSWORD_PROD }}
+            username: ${{ secrets.DOCKERHUB_USERNAME }}
+            password: ${{ secrets.DOCKERHUB_PASSWORD }}
         - run: |
-            docker build . -t spacedeck-open:${{ github.run_id }}
-            docker tag spacedeck-open:${{ github.run_id }} ${{ secrets.REGISTRY_LOGIN_SERVER_PROD }}/spacedeck-open:${{ github.run_id }}
-            docker tag spacedeck-open:${{ github.run_id }} ${{ secrets.REGISTRY_LOGIN_SERVER_PROD }}/spacedeck-open:latest
-            docker push ${{ secrets.REGISTRY_LOGIN_SERVER_PROD }}/spacedeck-open:${{ github.run_id }}
-            docker push ${{ secrets.REGISTRY_LOGIN_SERVER_PROD }}/spacedeck-open:latest
+            echo "Release version: ${{ env.RELEASE_VERSION }}"
+            docker build -t spacedeck-open:${{ github.sha }} .
+            docker tag spacedeck-open:${{ github.sha }} ${{ secrets.DOCKERHUB_USERNAME }}/spacedeck-open:${{ github.sha }}
+            docker tag spacedeck-open:${{ github.sha }} ${{ secrets.DOCKERHUB_USERNAME }}/spacedeck-open:${{ env.RELEASE_VERSION }}
+            docker push ${{ secrets.DOCKERHUB_USERNAME }}/spacedeck-open:${{ github.sha }}
+            docker push ${{ secrets.DOCKERHUB_USERNAME }}/spacedeck-open:${{ env.RELEASE_VERSION }}
