--- a/.github/workflows/spce-prod.yml
+++ b/.github/workflows/spce-prod.yml
@@ -15,6 +15,10 @@ jobs:
           with:
             ref: spce-prod
 
+        - uses: actions/setup-node@v3
+          with:
+            node-version: 14
+
         - name: Set Release version
           run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
 
