--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -10,12 +10,13 @@ jobs:
         steps:
         # checkout the repo
         - name: 'Checkout GitHub Action'
-          uses: actions/checkout@master
-
-        - name: 'Login via Azure CLI'
-          uses: azure/login@v1
+          uses: actions/checkout@v3
           with:
-            creds: ${{ secrets.AZURE_CREDENTIALS }}
+            ref: spce-prod
+
+        - uses: actions/setup-node@v3
+          with:
+            node-version: 10
 
         - name: Cache node modules
           uses: actions/cache@v2
@@ -33,17 +34,14 @@ jobs:
             gulp styles
 
         - name: 'Build and push image'
-          uses: azure/docker-login@v1
+          uses: docker/login-action@v2
           with:
-            login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
-            username: ${{ secrets.REGISTRY_USERNAME }}
-            password: ${{ secrets.REGISTRY_PASSWORD }}
+            username: ${{ secrets.DOCKERHUB_USERNAME }}
+            password: ${{ secrets.DOCKERHUB_PASSWORD }}
         - run: |
-            docker build . -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/spacedeck-open:${{ github.run_id }}
-            docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/spacedeck-open:${{ github.run_id }}
-
-        - name: 'Deploy to Azure App Service'
-          uses: 'azure/webapps-deploy@v2'
-          with:
-            app-name: 'meetingmaker-spacedeck-dev'
-            images: ${{ secrets.REGISTRY_LOGIN_SERVER }}/spacedeck-open:${{ github.run_id }}
+            echo "Release version: ${{ env.RELEASE_VERSION }}"
+            docker build -t spacedeck-open:${{ github.sha }} .
+            docker tag spacedeck-open:${{ github.sha }} ${{ secrets.DOCKERHUB_USERNAME }}/spacedeck-open-dev:${{ github.sha }}
+            docker tag spacedeck-open:${{ github.sha }} ${{ secrets.DOCKERHUB_USERNAME }}/spacedeck-open-dev:latest
+            docker push ${{ secrets.DOCKERHUB_USERNAME }}/spacedeck-open-dev:${{ github.sha }}
+            docker push ${{ secrets.DOCKERHUB_USERNAME }}/spacedeck-open-dev:latest
