New dev workflow

--- a/.github/workflows/spce-prod.yml
+++ b/.github/workflows/spce-prod.yml
@@ -27,7 +27,7 @@ jobs:
           id: npm-cache
           with:
             path: node_modules
-            key: spacedeck-node_modules-${{ hashFiles('**/package-lock.json') }}
+            key: spacedeck-node_modules1-${{ hashFiles('**/package-lock.json') }}
 
         - name: Install Dependencies
           if: steps.npm-cache.outputs.cache-hit != 'true'
