--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -23,12 +23,13 @@ jobs:
           id: npm-cache
           with:
             path: node_modules
-            key: spacedeck-node_modules-${{ hashFiles('**/package-lock.json') }}
+            key: spacedeck-node_modules1-${{ hashFiles('**/package-lock.json') }}
 
         - name: Install Dependencies
           if: steps.npm-cache.outputs.cache-hit != 'true'
           run: |
             npm install
+
         - name: Build Style
           run: |
             gulp styles
