--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "serve-static": "^1.13.1",
     "slug": "^1.1.0",
     "sqlite3": "^4.2.0",
+    "tedious": "^5.0.3",
     "umzug": "^2.1.0",
     "underscore": "^1.13.1",
     "uuid": "^3.2.1",
