--- a/helm/templates/file-pv-claim.yaml
+++ b/helm/templates/file-pv-claim.yaml
@@ -1,6 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
+  name: {{ .Chart.Name }}
   namespace: {{ .Chart.Name }}
 spec:
   storageClassName: azurefile
