--- a/helm/templates/spacedeck-service-dev.yaml
+++ b/helm/templates/spacedeck-service-dev.yaml
@@ -1,23 +1,14 @@
-apiVersion: networking.k8s.io/v1
-kind: Ingress
+apiVersion: v1
+kind: Service
 metadata:
   name: {{ .Chart.Name }}
   labels:
-    chart: '{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}'
-  annotations:
-    appgw.ingress.kubernetes.io/use-private-ip: "false" 
-    appgw.ingress.kubernetes.io/ssl-redirect: "true"
-    appgw.ingress.kubernetes.io/appgw-ssl-certificate: "spce-agic-cert"
-    kubernetes.io/ingress.class: azure/application-gateway
+    app: '{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}'
 spec:
-  rules:
-  - host: {{ .Values.host.url }}
-    http: 
-      paths:
-      - path: {{ .Values.host.path }}
-        pathType: Prefix
-        backend:
-          service:
-            name: {{ .Chart.Name }}
-            port:
-              number: {{ .Values.service.ClusterIP.port }}
+  type: {{ .Values.service.ClusterIP.type }}
+  ports:
+  - port: {{ .Values.service.ClusterIP.port }}
+    targetPort: {{ .Values.service.ClusterIP.targetPort }}
+    protocol: {{ .Values.service.ClusterIP.protocol }}
+  selector:
+    app: "{{  .Chart.Name }}-selector"
