--- a/helm/templates/ingress.yaml
+++ b/helm/templates/ingress.yaml
@@ -10,7 +10,7 @@ metadata:
     appgw.ingress.kubernetes.io/appgw-ssl-certificate: "spce-agic-cert"
     kubernetes.io/ingress.class: azure/application-gateway
     appgw.ingress.kubernetes.io/backend-path-prefix: "/"
-    appgw.ingress.kubernetes.io/health-probe-path: "/healthz"
+    appgw.ingress.kubernetes.io/health-probe-path: "/ping"
 spec:
   rules:
   - host: {{ .Values.host.url }}
